--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "express-async-errors": "^3.1.1",
+    "morgan": "^1.10.0"
   }
 }
